--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-bootstrap": "^0.32.37"
+    "@types/react-bootstrap": "^0.32.37",
+    "@types/react-slick": "^0.23.13"
   }
 }
